--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI= mongodb+srv: //nishaazmat38:mongopass$1@users.Ouxcyr6.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI= mongodb+srv://nishaazmat38:FdibApZ3K4AwlwVj@cluster0.257bebs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # MONGO_URI=mongodb://ConnectIn:ConnectIn@ac-yad0qbq-shard-00-00.am3feci.mongodb.net:27017,ac-yad0qbq-shard-00-01.am3feci.mongodb.net:27017,ac-yad0qbq-shard-00-02.am3feci.mongodb.net:27017/home-mart-web-project?ssl=true&replicaSet=atlas-8j02ck-shard-0&authSource=admin&retryWrites=true&w=majority
 JWT_SECRET = secret
 PORT = 5000
